[project]
name = "mlx_ctc"
version = "0.0.1"
authors = [
  { name = "Yury Popov", email = "dev@phoenix.dj" },
]
description = "C++ and Metal extensions for MLX CTC Loss"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/djphoenix/mlx-ctc"
Issues = "https://github.com/djphoenix/mlx-ctc/issues"

[build-system]
requires = [
  "setuptools>=42",
  "cmake>=3.24",
  "mlx>=0.10.0",
  "nanobind@git+https://github.com/wjakob/nanobind.git#egg=4148debcf91f5ccab0c3b8d67b5c3cabd61f407f",
]
build-backend = "setuptools.build_meta"
